# stm32f407-meson-template

./: .env.dist  .gitignore  .mxproject  Dockerfile  Makefile  README.md  STM32F407XX_FLASH.ld  convert_to_meson.py  cross_file.docker.txt  cross_file.txt  docker-compose.yml  f407io.ioc  flash.sh  meson.build  rebuild.docker.sh  rebuild.sh
.github/workflows/: build-check.yml
Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: main.c  stm32f4xx_hal_msp.c
interface/: stlink.cfg
